infrastructure/gateways/plane/gateway-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: plane-tls-grant
  namespace: plane
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kgateway-system
  to:
    - group: ""
      kind: Secret
      name: plane-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane-route
  namespace: plane
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: plane-listeners
      sectionName: https
  hostnames:
    - plane.episerve.zib.de
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: plane-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: plane-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /spaces
      backendRefs:
        - name: plane-space
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /god-mode
      backendRefs:
        - name: plane-admin
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /live
      backendRefs:
        - name: plane-live
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /uploads
      backendRefs:
        - name: plane-minio
          port: 9000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plane-web
          port: 3000
